--- a/themes/myblogtheme/layouts/_default/single.html
+++ b/themes/myblogtheme/layouts/_default/single.html
@@ -5,5 +5,6 @@
             <time datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "02 Jan 2006" }}</time>
         {{ end }}
         {{ .Content }}
+        {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
     </article>
 {{ end }}
