--- a/themes/myblogtheme/layouts/index.html
+++ b/themes/myblogtheme/layouts/index.html
@@ -1,10 +1,13 @@
 {{ define "main" }}
-        <ul>
-        {{ range first 5 (where .Site.RegularPages "Type" "posts") }}
-            <li>
-                <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-                <time datetime="{{ .Date.Format "2006-01-02" }}">{{ .Date.Format "02 Jan 2006" }}</time>
-            </li>
+<ul>
+    {{ range first 5 (where .Site.Pages "Section" "posts") }}
+    <li>
+        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+        {{ with .GitInfo }}
+        <time datetime="{{ .AuthorDate.Format " 2006-01-02" }}">{{ .AuthorDate.Format "02 Jan 2006" }}</time>
         {{ end }}
-    </ul>
+        
+    </li>
+    {{ end }}
+</ul>
 {{ end }}
