--- a/themes/myblogtheme/layouts/home.html
+++ b/themes/myblogtheme/layouts/home.html
@@ -1,12 +1,13 @@
 {{ define "main" }}
-<h1>{{ .Site.Title }}</h1>
-{{ .Content }}
-<ul>
-    {{ range first 5 (where .Site.Pages "Section" "posts") }}
-    <li>
-        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-        <time datetime="{{ .Date.Format " 2006-01-02" }}">{{ .Date.Format "02 Jan 2006" }}</time>
-    </li>
-    {{ end }}
-</ul>
+    {{ .Content }}
+    <ul>
+        {{ range first 5 (where .Site.Pages "Section" "posts") }}
+        <li>
+            <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+            {{ with .GitInfo }}
+            <time datetime="{{ .AuthorDate.Format " 2006-01-02" }}">{{ .AuthorDate.Format "02 Jan 2006" }}</time>
+            {{ end }}
+        </li>
+        {{ end }}
+    </ul>
 {{ end }}
