--- a/themes/myblogtheme/layouts/_default/baseof.html
+++ b/themes/myblogtheme/layouts/_default/baseof.html
@@ -25,7 +25,7 @@
         </div>
     </main>
     <footer>
-        <p>&copy; {{ now.Year }} {{ .Site.Title }}</p>
+        {{ partial "footer.html" . }}
     </footer>
 </body>
 
