--- a/themes/myblogtheme/layouts/_partials/footer.html
+++ b/themes/myblogtheme/layouts/_partials/footer.html
@@ -1,1 +1,20 @@
-<p>Copyright {{ now.Year }}. All rights reserved.</p>
+<div class="footer-credits">
+    <div class="credit-item">
+        <span>Licence CC BY-SA 4.0</span>
+        <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/deed.fr">
+            <img alt="Licence Creative Commons" src="/images/logos/by-sa.svg" />
+        </a>
+    </div>
+    <div class="credit-item">
+        <span>Powered by</span>
+        <a href="https://gohugo.io/">
+            <img alt="Logo Hugo" src="/images/logos/hugo.svg" />
+        </a>
+    </div>
+    <div class="credit-item">
+        <span>Assisted by</span>
+        <a href="https://gemini.google.com/">
+            <img alt="Logo Google Gemini" src="/images/logos/gemini.svg" />
+        </a>
+    </div>
+</div>
