--- a/themes/myblogtheme/layouts/home.html
+++ b/themes/myblogtheme/layouts/home.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
+    <h1>{{ .Title }}</h1>
     {{ .Content }}
-    <ul>
+    <ul class="post-list">
         {{ range first 5 (where .Site.Pages "Section" "posts") }}
         <li>
             <a href="{{ .RelPermalink }}">{{ .Title }}</a>
