--- a/themes/myblogtheme/layouts/page.html
+++ b/themes/myblogtheme/layouts/page.html
@@ -1,9 +1,10 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
-
-  {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
-  {{ $dateHuman := .Date | time.Format ":date_long" }}
-  <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+  {{ if eq .Section "posts" }}
+    {{ with .GitInfo }}
+      <time datetime="{{ .AuthorDate.Format "2006-01-02" }}">{{ .AuthorDate.Format "02 Jan 2006" }}</time>
+    {{ end }}
+  {{ end }}
 
   {{ .Content }}
   {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
