Refine i3 article and update README

--- a/themes/myblogtheme/layouts/shortcodes/contact_print.html
+++ b/themes/myblogtheme/layouts/shortcodes/contact_print.html
@@ -1,6 +1,6 @@
 <div class="print-only-contact">
     <ul>
-        <li>Email: Christophe.delacourt.perso@gmail.com</li>
+        <li>Email: <a href="javascript:void(0);" onclick="window.location.href = 'mailto:' + 'christophe.delacourt.perso' + '@' + 'gmail.com';">christophe.delacourt.perso (at) gmail.com</a></li>
         <li>
             <a href="https://www.linkedin.com/in/christophe-delacourt-6619598b/" target="_blank" rel="noopener noreferrer">
                 <img src="/images/logos/linkedin.svg" alt="LinkedIn" style="width: 20px; height: 20px; vertical-align: middle;"> LinkedIn Profile
