try fixing footer images

--- a/themes/myblogtheme/layouts/_partials/footer.html
+++ b/themes/myblogtheme/layouts/_partials/footer.html
@@ -2,19 +2,19 @@
     <div class="credit-item">
         <span>Licence CC BY-SA 4.0</span>
         <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/deed.fr">
-            <img alt="Licence Creative Commons" src="/images/logos/by-sa.svg" />
+            <img alt="Licence Creative Commons" src="{{ "/images/logos/by-sa.svg" | relURL }}" />
         </a>
     </div>
     <div class="credit-item">
         <span>Powered by</span>
         <a href="https://gohugo.io/">
-            <img alt="Logo Hugo" src="/images/logos/hugo.svg" />
+            <img alt="Logo Hugo" src="{{ "/images/logos/hugo.svg" | relURL }}" />
         </a>
     </div>
     <div class="credit-item">
         <span>Assisted by</span>
         <a href="https://gemini.google.com/">
-            <img alt="Logo Google Gemini" src="/images/logos/gemini.svg" />
+            <img alt="Logo Google Gemini" src="{{ "/images/logos/gemini.svg" | relURL }}" />
         </a>
     </div>
 </div>
