--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,6 @@
+{{ define "title" }}404 Not Found{{ end }}
+
+{{ define "main" }}
 <h1>404 - Erreur de compilation</h1>
 <p>
   La page que vous cherchez n'a pas été trouvée.
@@ -7,3 +10,4 @@
 <p>
   Retournez à la <a href="{{ .Site.BaseURL }}">page d'accueil</a> et réessayez.
 </p>
+{{ end }}
