--- a/themes/myblogtheme/layouts/_default/baseof.html
+++ b/themes/myblogtheme/layouts/_default/baseof.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="{{ $style.Permalink }}">
     {{ block "head" . }}
     {{ end }}
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.Config.Services.GoogleAnalytics.ID }}"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', '{{ site.Config.Services.GoogleAnalytics.ID }}');
+    </script>
 </head>
 
 <body>
