--- a/themes/myblogtheme/layouts/shortcodes/contact_print.html
+++ b/themes/myblogtheme/layouts/shortcodes/contact_print.html
@@ -1,17 +1,21 @@
 <div class="print-only-contact">
     <ul>
-        <li>Email: <a href="javascript:void(0);" onclick="window.location.href = 'mailto:' + 'christophe.delacourt.perso' + '@' + 'gmail.com';">christophe.delacourt.perso (at) gmail.com</a></li>
+        <li>Email: <a href="mailto:christophe.delacourt.perso@gmail.com">christophe.delacourt.perso@gmail.com</a></li>
         <li>
-            <a href="https://www.linkedin.com/in/christophe-delacourt-6619598b/" target="_blank" rel="noopener noreferrer">
-                <img src="/images/logos/linkedin.svg" alt="LinkedIn" style="width: 20px; height: 20px; vertical-align: middle;"> LinkedIn Profile
+            <a href="https://www.linkedin.com/in/christophe-delacourt-6619598b/" target="_blank"
+                rel="noopener noreferrer">
+                <img src="/images/logos/linkedin.svg" alt="LinkedIn"
+                    style="width: 20px; height: 20px; vertical-align: middle;"> LinkedIn Profile
             </a>
         </li>
         <li>
             <a href="https://github.com/doomtr666/" target="_blank" rel="noopener noreferrer">
-                <img src="/images/logos/github.svg" alt="GitHub" style="width: 20px; height: 20px; vertical-align: middle;"> GitHub Profile
+                <img src="/images/logos/github.svg" alt="GitHub"
+                    style="width: 20px; height: 20px; vertical-align: middle;"> GitHub Profile
             </a>
         </li>
-        <li><a href="https://doomtr666.github.io/whoiam" target="_blank" rel="noopener noreferrer">Mon CV en ligne</a></li>
+        <li><a href="https://doomtr666.github.io/devlog/mon-cv/" target="_blank" rel="noopener noreferrer">Mon CV en
+                ligne</a></li>
         <li><a href="https://doomtr666.github.io/devlog" target="_blank" rel="noopener noreferrer">Blog</a></li>
     </ul>
 </div>
