--- a/themes/myblogtheme/layouts/_partials/footer.html
+++ b/themes/myblogtheme/layouts/_partials/footer.html
@@ -18,3 +18,6 @@
         </a>
     </div>
 </div>
+<div class="footer-no-tracking">
+    <p>Ce site n'utilise aucun cookie et ne collecte aucune donnée personnelle.</p>
+</div>
